2020-08-21 Azael Reyes <azael.devel@gmail.com>
version 0.14.3
	- Se recupera directorio de ejemplos.
version 0.14.2
	- Correcion: No reconoce el propio paquete.
version 0.14.1
	- Correción en instrucción de instalación.
version 0.14.0
	- Detectar parámteros desconocidos.
version 0.13.1
	- Correción de no paramatros pasados.
	- Correcion de paquetes con guion en el nombre(Pacman).

2020-08-20 Azael Reyes <azael.devel@gmail.com>
version 0.13.0
	- Se agrege un script de ejemplo.
		El script es una reinterpretacion del del srcipt version-check.sh
		proveido por LFS Book.

2020-08-12 Azael Reyes <azael.devel@gmail.com>
version : 0.12.0
	- Mensajes de usuario en español
	- Correciones de codificacion adelantada para pacman.
		Se agregan pruebas para pacman.

2020-08-11 Azael Reyes <azael.devel@gmail.com>
Considerese este registro como un resumen de los cambios hechas hasta 
la version 0.11.0.
	- Soporte para Portage
		- Aceptar nombre de paquete incompleto
	- Soporte para Pacman
	- Opción de Ayuda
	- Opción de version de apquete
	- Opción de Plataforma
	- Inclución de pruebas
	- Acceptar operadores s(smal than) y g(grater than)
		Ya que bash usa los simbolos > y < como operadores de flujo, version
		agrega s y g en su lugar.