@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 dnl Created by Anjuta application wizard.
 
-AC_INIT(octetos_version, 0.14.4-alpha)
+AC_INIT(octetos_version, 0.15.0-alpha)
 AC_CONFIG_HEADERS([config.h])
 AM_INIT_AUTOMAKE([1.11])
 AM_SILENT_RULES([yes])
@@ -14,12 +14,12 @@ AC_PROG_CXX
 dnl ***************************************************************************
 dnl Internationalization
 dnl ***************************************************************************
-IT_PROG_INTLTOOL([0.35.0])
+#IT_PROG_INTLTOOL([0.35.0])
 
-GETTEXT_PACKAGE=octetos_version
-AC_SUBST(GETTEXT_PACKAGE)
-AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [GETTEXT package name])
-AM_GLIB_GNU_GETTEXT
+#GETTEXT_PACKAGE=octetos_version
+#AC_SUBST(GETTEXT_PACKAGE)
+#AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [GETTEXT package name])
+#AM_GLIB_GNU_GETTEXT
 
 
 
@@ -68,7 +68,7 @@ PKG_CHECK_MODULES(CUNIT,cunit)
 AC_OUTPUT([
 Makefile
 src/Makefile
-po/Makefile.in
+src/octetos-version.pc
 tests/Makefile
 ])
 
