@@ -1,3 +1,6 @@
+2020-08-30 Azael Reyes <azael.devel@gmail.com>
+	- Agregar API publica(Portage)
+
 2020-08-21 Azael Reyes <azael.devel@gmail.com>
 version 0.14.3
 	- Se recupera directorio de ejemplos.
